tests/script_errors/string_interpolation_invalid_utf8/error.txt
Error: 
    1 | " #{ " \u666G " } "
      |        ^^^^^^ An invalid UTF8 escape sequence was found